    failed to converge on problematic data sets
  - new default cost function "gof" based on the multivariate chi-squared statistic,
    which is closely related to maximum likelihood estimation
  - parameter optimization now performs multiple runs with different random start
    values by default, improving robustness of the parameter estimation
  - lnre.bootstrap() performs parametric bootstrapping from an LNRE model
  - bootstrapped confidence intervals for model parameters can be obtained with
    confint() applied to an LNRE model object with bootstrap replicates
  - compute various productivity measures from observed frequency spectrum,
    vocabulary growth curve or token vector
  - merge() method for two or more type frequency lists
  - new example data sets from Evert & Luedeling (2001) and Baayen (2001)

Version 0.6-10

  - maintenance release for compatibility with new CRAN checks and restrictions
  - zipfR plotting utilities (zipfR.begin.plot, zipfR.end.plot, etc.) are deprecated;
    device="x11" and device="quartz" now both open the default device with dev.new(),
    which is not guaranteed to be an on-screen device
  - update stale URLs and maintainer e-mail addresses

Version 0.6-8

  - zipfR tutorial has been rewritten as genuine package vignette
  - write.tfl() and read.tfl() now allow character encoding of the disk file to be
    declared; read.tfl() safely reads type strings containing quotes
  
Version 0.6-6

  - interim release for compliance with new, stricter CRAN requirements
  - Zipf-ranking plots for type-frequency lists (of class "tfl")
  - file I/O automatically compresses/decompresses ".gz" files in functions
    read.tfl(), read.spc(), read.vgc(), write.tfl(), write.spc(), write.vgc()
  - dropped support for very old R versions (before 2.3.1 or so),
    where read.delim() does not accept comment.char= option; now requires 2.10.1+
  - removed zipfR.legend() function since standard legend() now offers the same